Update article title and content placeholders

--- a/spirit-week-article.html
+++ b/spirit-week-article.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Article Title | In The Middle</title>
+  <title>Spirit Week | In The Middle</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
@@ -113,8 +113,8 @@
 
 <body>
   <header>
-    <h1>Article Title</h1>
-    <p>By [Author Name] — [Date]</p>
+    <h1>Spirit Week</h1>
+    <p>By Liv, Alana, Peyton, Sara — 10/13/2025</p>
   </header>
 
   <div class="article-card">
@@ -122,18 +122,17 @@
 
     <article>
       <p>
-        Write your article here. Replace this text with your own content. You can
-        use <strong>bold</strong> or <em>italics</em> for emphasis.
+       [Article Content]
       </p>
 
-      <h2>Subheading Example</h2>
+      <h2>Subheading (if necessary)</h2>
       <p>
-        Continue your article here. You can add another image below.
+        [article content 2]
       </p>
-      <img src="https://via.placeholder.com/700x300" alt="Supporting Image" class="article-image" />
+      <img src="https://placehold.co/700x300?text=Placeholder" alt="Supporting Image" class="article-image" />
 
       <p>
-        End with your concluding paragraph or any final note.
+       Conclusion (if necessary)
       </p>
     </article>
   </div>
