Change link target for Spirit Week article
Target is now a new tab, no longer the parent page.

--- a/home-page.html
+++ b/home-page.html
@@ -277,7 +277,7 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="spirit-week-article.html" target="_parent" class="article-title">Spirit Week</a></strong></u>
+            <span class="tooltip"><u><strong><a href="spirit-week-article.html" target="_blank" class="article-title">Spirit Week</a></strong></u>
                 <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
