Change background color to a lighter shade

--- a/spirit-week-article.html
+++ b/spirit-week-article.html
@@ -15,7 +15,7 @@
   }
 
   body {
-    background-color: #e6f2ff; /* light blue */
+    background-color: #f7f9fb; /* light blue */
     color: #003366; /* dark blue text */
     display: flex;
     flex-direction: column;
