Revise Spirit Week article content and image
Updated the content of the Spirit Week article with placeholder text and a new image source.

--- a/spirit-week-article.html
+++ b/spirit-week-article.html
@@ -102,22 +102,16 @@
 <body>
   <div class="container">
     <h1>Spirit Week</h1>
-    <img src="spirit-week.jpg" alt="Students celebrating Spirit Week">
+    <img src="https://dummyimage.com/720x720/343bb0/ffffff.png&text=Placeholder" alt="[Optional Caption Text]">
     <p>
-      Spirit Week at our school was filled with excitement, creativity, and community pride. 
-      Each day brought a new theme, from Pajama Day to Class Color Day, and the halls were 
-      alive with laughter and school spirit.
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat commodo ante, sed euismod ex malesuada ut. Sed lacinia mi in quam commodo tempus. Vestibulum consequat mollis tellus, id vulputate tortor fringilla vitae. Aliquam mattis lacus mauris, vitae ultrices lacus varius quis. Cras a iaculis nisl. Etiam a placerat metus. Aliquam erat volutpat. Donec tincidunt elit vitae ante pretium, nec feugiat magna imperdiet. Nam varius eros quis ante tempor sagittis. Suspendisse fringilla nunc ac nisi egestas, id pretium dolor consectetur. Vivamus dictum erat dolor, gravida vulputate lorem accumsan non. Vivamus aliquam pellentesque neque non feugiat. Ut ne
     </p>
     <p>
-      Students competed in friendly contests, decorated hallways, and showcased their unique 
-      styles. The highlight of the week was the pep rally, where students and teachers joined 
-      together to celebrate school unity.
+   Quisque id est bibendum, condimentum leo sit amet, sodales ligula. Nullam semper non lectus sit amet ultrices. Vestibulum vel sapien quis nulla ornare consequat in at nibh. Suspendisse volutpat semper dolor in venenatis. Aliquam facilisis pulvinar tortor eget tincidunt. Pellentesque augue metus, scelerisque a tincidunt sodales, tristique fermentum massa. Sed a ligula non nunc dictum vulputate. Cras vitae enim interdum, finibus nulla nec, euismod lacus. Proin pulvinar quis magna sed fermentum. Suspendisse eros tellus, convallis vel scelerisque ut, eleifend nec nibh. Phasellus tristique pulvinar facilisis. Cras maximus non ligula ut placerat. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Proin tincidunt leo ac neque tempor, dignissim ullamcorper orci ullamcorper.
     </p>
     <hr>
     <p>
-      Spirit Week reminded everyone that our school isn’t just a place for learning — 
-      it’s a community where students express themselves, cheer for one another, and 
-      build lasting memories.
+    Nullam euismod orci eget lobortis sagittis. Cras cursus mauris quis urna malesuada porttitor. Proin magna libero, porta in augue vitae, venenatis porta nibh. Quisque facilisis sed orci eu commodo. Aliquam vestibulum accumsan porta. Etiam rutrum luctus porta. Aenean non vulputate dolor. Aliquam pretium ligula enim, sit amet vulputate nisi blandit eget. Aliquam scelerisque auctor nulla non rhoncus. Nam iaculis orci in arcu bibendum ullamcorper. Duis sit amet sagittis urna, id ultricies mauris. In vel justo eu ligula commodo dapibus. In hac habitasse platea dictumst. Nulla facilisi. Ut id massa pulvinar, sagittis nibh eget, dapibus arcu. Maecenas in venenatis quam.
     </p>
     <p style="text-align: center;">
       <a href="home-page.html">← Back to Home</a>
