--- a/home-page.html
+++ b/home-page.html
@@ -368,7 +368,7 @@ document.body.addEventListener('pointerleave', (e) => {
             </span>
         </li>
                         <li>
-            <span class="tooltip">strong><u>AIS/Haverford Day</u></strong>
+            <span class="tooltip"><strong><u>AIS/Haverford Day</u></strong>
                 <span class="tooltiptext">Everything there is to know about the Girls Soccer team! Authors: <i>Ava, Asha</i></span>
             </span>
         </li>
