--- a/home-page.html
+++ b/home-page.html
@@ -277,12 +277,12 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_blank" class="article-title">Spirit Week</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_parent" class="article-title">Spirit Week</a></strong></u>
                 <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong>Harvest Day</strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day?authuser=1" target="_parent" class="article-title">Harvest Day</a></strong></u>
                 <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
             </span>
         </li>
