--- a/home-page.html
+++ b/home-page.html
@@ -277,32 +277,32 @@ document.body.addEventListener('pointerleave', (e) => {
                     <p class="font-bold text-lg text-navy mb-2">In This Edition:</p>
                     <ul class="list-disc pl-5 space-y-1">
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week" target="_parent" class="article-title">Spirit Week</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/spirit-week?authuser=1" target="_parent" class="article-title">Spirit Week</a></strong></u>
                 <span class="tooltiptext">A week of different-themed dressdown days! Authors: <i>Liv, Alana, Peyton, Sara</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day" target="_parent" class="article-title">Harvest Day</a></strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/harvest-day?authuser=1" target="_parent" class="article-title">Harvest Day</a></strong></u>
                 <span class="tooltiptext">An LS tradition with games, prizes, and all-around fun! Authors: <i>Remy, Everly, Annie, Katie</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong>8th Grade Washington D.C. Trip</strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/washington-d-c-trip?authuser=1" target="_parent" class="article-title">8th Grade Washington D.C. Trip</a></strong></u>
                 <span class="tooltiptext">All about the Washington D.C. Trip! Authors: <i>Adam, Leo, Zach, Ellen</i></span>
             </span>
         </li>
                        <li>
-            <span class="tooltip"><u><strong>The Council Corner</strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/the-council-corner?authuser=1" target="_parent" class="article-title">The Council Corner</a></strong></u>
                 <span class="tooltiptext">The hottest news from the Student Council! Authors: <i>Gus, Ellen</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong>StuCo Game Night</strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/stuco-game-night?authuser=1" target="_parent" class="article-title">StuCo Game Night</a></strong></u>
                 <span class="tooltiptext">A night of fun games from the Student Council. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
                         <li>
-            <span class="tooltip"><u><strong>7th Grade Echo Hill Trip</strong></u>
+            <span class="tooltip"><u><strong><a href="https://sites.google.com/episcopalacademy.org/inthemiddle-eamsnewspaper/news-features/echo-hill-trip?authuser=1" target="_parent" class="article-title">7th Grade Echo Hill Trip</a></strong></u>
                 <span class="tooltiptext">All about the 7th Grade Echo Hill Trip. Authors: <i>Sara Adibi</i></span>
             </span>
         </li>
